// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSelector it renders an error when an error exists 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding: 16px;
  margin: 8px;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: 0 0.7px 2.2px -8px rgba(0,0,0,0.18),0 1.7px 5.4px rgba(0,0,0,0.129),0 3.1px 10.1px rgba(0,0,0,0.107),0 5.6px 18.1px rgba(0,0,0,0.09),0 10.4px 33.8px rgba(0,0,0,0.073),0 25px 81px rgba(0,0,0,0.051);
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c24 {
  cursor: pointer;
  border: 1px solid status.fail.foreground;
  background-color: #1AD08F;
  border-color: status.fail.foreground;
  color: status.fail.foreground;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100%;
  border-color: #660000;
  border-width: 1px;
  border-radius: 4px;
  background-color: transparent;
  color: #660000;
}

.c24:hover {
  opacity: 0.8;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c18 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c17 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c22 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
}

.c9 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.25rem;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

.c13 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c13:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
    >
      <li
        class="c3"
        color="core.primary"
        display="flex"
      >
        <div
          class="c4"
          color="core.white"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Sw
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Switch Accounts
        </h2>
      </li>
      <li
        class=""
      >
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Your single
           
          seed phrase
           
          creates hundreds of individual "accounts".
          <br />
          <a
            class="c8"
            color="core.primary"
            font-size="3"
            href="/faqs"
            rel="noopener"
            target="_blank"
          >
            Don’t see an account you were previously using?
          </a>
        </p>
      </li>
    </ul>
    <ul
      class="c9"
    >
      <li
        class="c10"
        display="flex"
      >
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  0
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z22 ... 6wgi
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c19"
          color="card.error.foreground"
          display="flex"
          height="11"
          width="11"
        >
          <div
            class="c14"
            display="flex"
          >
            <div
              class="c20"
              color="status.fail.foreground"
              display="flex"
              size="6"
            >
              <h3
                class="c5"
              >
                Er
              </h3>
            </div>
            <p
              class="c7"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Error
            </p>
          </div>
          <div
            class="c21"
          >
            <p
              class="c22"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              error for testing
            </p>
          </div>
          <div
            class="c23"
            display="flex"
          >
            <button
              class="c24"
              color="status.fail.foreground"
              font-size="3"
              height="100%"
              type="button"
            >
              Try again
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountSelector it renders the loading screen first 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c2 {
  display: inline-block;
  height: 48px;
  width: 48px;
  background-color: #5E26FF;
}

.c3 {
  display: inline-block;
  height: 24px;
  width: 24px;
  background-color: rgb(26,0,102);
  -webkit-animation-name: bvGDKI;
  animation-name: bvGDKI;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
    height="100vh"
  >
    <span
      class="c2"
    >
      <span
        class="c3"
      />
    </span>
    <h4
      class="c4"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Loading...
    </h4>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux with the investor copy when the investor prop is passed 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c17 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c16 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c12 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c12:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
    >
      <li
        class="c3"
        color="core.primary"
        display="flex"
      >
        <div
          class="c4"
          color="core.white"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Sw
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Select Account
        </h2>
      </li>
      <li
        class=""
      >
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Please select the Ledger account you wish to own and sign for your multisig investor wallet.
        </p>
      </li>
    </ul>
    <ul
      class="c8"
    >
      <li
        class="c9"
        display="flex"
      >
        <div
          class="c10"
          display="inline-block"
        >
          <div
            class="c11 c12"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c13"
              display="flex"
            >
              <div
                class="c14"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  0
                </h3>
              </div>
              <div
                class="c15"
                display="flex"
              >
                <p
                  class="c16"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z22 ... 6wgi
                </h2>
              </div>
            </div>
            <div
              class="c15"
              display="flex"
            >
              <p
                class="c16"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c10"
          display="inline-block"
        >
          <div
            class="c11 c12"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c13"
              display="flex"
            >
              <div
                class="c14"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  1
                </h3>
              </div>
              <div
                class="c15"
                display="flex"
              >
                <p
                  class="c16"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b1uq
                </h2>
              </div>
            </div>
            <div
              class="c15"
              display="flex"
            >
              <p
                class="c16"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c10"
          display="inline-block"
        >
          <div
            class="c11 c12"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c13"
              display="flex"
            >
              <div
                class="c14"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  2
                </h3>
              </div>
              <div
                class="c15"
                display="flex"
              >
                <p
                  class="c16"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b2uq
                </h2>
              </div>
            </div>
            <div
              class="c15"
              display="flex"
            >
              <p
                class="c16"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c10"
          display="inline-block"
        >
          <div
            class="c11 c12"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c13"
              display="flex"
            >
              <div
                class="c14"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  3
                </h3>
              </div>
              <div
                class="c15"
                display="flex"
              >
                <p
                  class="c16"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b3uq
                </h2>
              </div>
            </div>
            <div
              class="c15"
              display="flex"
            >
              <p
                class="c16"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c10"
          display="inline-block"
        >
          <div
            class="c11 c12"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c13"
              display="flex"
            >
              <div
                class="c14"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  4
                </h3>
              </div>
              <div
                class="c15"
                display="flex"
              >
                <p
                  class="c16"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b4uq
                </h2>
              </div>
            </div>
            <div
              class="c15"
              display="flex"
            >
              <p
                class="c16"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in redux, and an option to create the next wallet 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  justify-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1200px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c18 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c17 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px;
}

.c9 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.25rem;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

.c13 {
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c13:hover {
  background: hsla(0,0%,90%,1);
  opacity: 1;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
  >
    <ul
      class="c2"
    >
      <li
        class="c3"
        color="core.primary"
        display="flex"
      >
        <div
          class="c4"
          color="core.white"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Sw
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Switch Accounts
        </h2>
      </li>
      <li
        class=""
      >
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Your single
           
          seed phrase
           
          creates hundreds of individual "accounts".
          <br />
          <a
            class="c8"
            color="core.primary"
            font-size="3"
            href="/faqs"
            rel="noopener"
            target="_blank"
          >
            Don’t see an account you were previously using?
          </a>
        </p>
      </li>
    </ul>
    <ul
      class="c9"
    >
      <li
        class="c10"
        display="flex"
      >
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  0
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1z22 ... 6wgi
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  1
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b1uq
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  2
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b2uq
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  3
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b3uq
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c11"
          display="inline-block"
        >
          <div
            class="c12 c13"
            color="colors.core.black"
            display="flex"
            height="11"
            overflow="hidden"
            width="11"
          >
            <div
              class="c14"
              display="flex"
            >
              <div
                class="c15"
                color="colors.core.black"
                display="flex"
                size="6"
              >
                <h3
                  class="c5"
                >
                  4
                </h3>
              </div>
              <div
                class="c16"
                display="flex"
              >
                <p
                  class="c17"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  Address
                </p>
                <h2
                  class="c18"
                  font-family="RT-Alias-Grotesk"
                  font-size="4"
                  font-weight="400"
                >
                  t1mbk ... b4uq
                </h2>
              </div>
            </div>
            <div
              class="c16"
              display="flex"
            >
              <p
                class="c17"
                font-family="RT-Alias-Grotesk"
                font-size="3"
                font-weight="400"
              >
                Balance
              </p>
              <h2
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="4"
                font-weight="400"
              >
                1
                FIL
              </h2>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
